tests/semantic_cases/invalid/var_param_requires_variable.ob0
(* INVALID: VAR parameter requires assignable variable, but literal is passed *)
MODULE Main;
PROCEDURE Bump(VAR target: INTEGER; amount: INTEGER);
BEGIN
END Bump;
BEGIN
  Bump(1, 2)
END Main.
